--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,20 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Langgraph
+.langgraph_api
+.langgraph_api/
+
+
+# Notebooks
+notebooks/
+*ipynb
+*ipynb_checkpoints
+
+# DS_Store
+.DS_Store
+
+# Data
+data/
+data/*
